# mero-papeleo-project

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  locustfile.py  pyproject.toml
.github/workflows/: python-app.yml
Backend/: pyproject.toml
Backend/app/: config.py  main.py  routes.py
Backend/application/: login_use_case.py  registration_use_case.py  use_cases.py  user_crud_use_case.py
Backend/domain/: models.py  schemas.py
Backend/domain/repositories/: mongo_repository.py
Backend/infrastructure/: mongo_client.py
Backend/infrastructure/adapters/: chromadb_adapter.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.tsx  index.css  jwt-decode.d.ts  main.tsx
app/: .coverage  configurations.py  main.py
app/adapters/: chromadb_adapter.py  mongo_repository.py  mongodb_adapter.py  openAI_adapter.py
app/api/: dependencies.py  routers.py
app/core/: models.py  ports.py
app/helpers/: strategies.py  vectorize_docs.py
app/test/: _test.py  pruebaHashes.py
app/usecases/: RAG_Usecases.py  files_usecases.py  login_use_case.py  registration_use_case.py  user_crud_use_case.py
app/userdata/: Reseña Carlos Altamirano y Juan Sebastian Llanos.docx
app/userfiles/: seedCoordServer.txt
app/utils/: strategies.py  vectorize_docs.py
mero-papeleo-frontend/: index.html  package-lock.json  package.json
mero-papeleo-frontend/src/: App.tsx  main.tsx
test/: _test.py
userFiles/: Bitacoras parte 2 - Carlos Andres Altamirano Sanchez - 2220330.docx  expoFormacion.docx
userdata/: hablaMELO.txt  hola.txt  pruebaCarlos.txt
(+53 files in other folders)
